<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="@dimen/top_bar_height"
        android:theme="@style/TopBarLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:theme="@style/TopBarTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/user_avatar_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_change_locale"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_locale_flag"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:src="@drawable/ic_britain_flag"
                    android:importantForAccessibility="no" />

            </androidx.cardview.widget.CardView>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_avatar"
                android:layout_width="124dp"
                android:layout_height="124dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/edit_text_gray"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_default_user_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"
                android:theme="@style/DescriptionText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_avatar"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="John Doe" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/user_info_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_avatar_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/UserInfoLayout">

                <TextView
                    android:layout_width="@dimen/description_text_width"
                    android:layout_height="wrap_content"
                    android:text="@string/email_desc"
                    android:theme="@style/DescriptionText" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/UserInfoText"
                    tools:text="user10@example.com" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/UserInfoLayout">

                <TextView
                    android:layout_width="@dimen/description_text_width"
                    android:layout_height="wrap_content"
                    android:text="@string/username_desc"
                    android:theme="@style/DescriptionText" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/UserInfoText"
                    tools:text="user10" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/UserInfoLayout">

                <TextView
                    android:layout_width="@dimen/description_text_width"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_desc"
                    android:theme="@style/DescriptionText" />

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/UserInfoText"
                    tools:text="M" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/UserInfoLayout">

                <TextView
                    android:layout_width="@dimen/description_text_width"
                    android:layout_height="wrap_content"
                    android:text="@string/age_desc"
                    android:theme="@style/DescriptionText" />

                <TextView
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/UserInfoText"
                    tools:text="26" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/UserInfoLayout">

                <TextView
                    android:layout_width="@dimen/description_text_width"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_desc"
                    android:theme="@style/DescriptionText" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/UserInfoText"
                    tools:text="1234567890" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/UserInfoLayout">

                <TextView
                    android:layout_width="@dimen/description_text_width"
                    android:layout_height="wrap_content"
                    android:text="@string/address_desc"
                    android:theme="@style/DescriptionText" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/UserInfoText"
                    tools:text="123 Street" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/user_info_buttons_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_info_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/passport_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_info_card">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/passport_data"
                    android:theme="@style/DescriptionText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/arrow_back_passport"
                    android:layout_width="@dimen/arrow_back_size"
                    android:layout_height="@dimen/arrow_back_size"
                    android:layout_marginEnd="8dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_arrow_right"
                    android:theme="@style/WhiteBackArrow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp"
                android:background="@color/main_text_color" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/vaccinations_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_info_card">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/vaccinations"
                    android:theme="@style/DescriptionText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/arrow_back_vaccines"
                    android:layout_width="@dimen/arrow_back_size"
                    android:layout_height="@dimen/arrow_back_size"
                    android:layout_marginEnd="8dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_arrow_right"
                    android:theme="@style/WhiteBackArrow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>